[gd_scene load_steps=9 format=3 uid="uid://cb2e2cndtui6m"]

[ext_resource type="Script" uid="uid://drhgqgra8rnsh" path="res://scenes/characters/character.gd" id="1_f5tgq"]
[ext_resource type="PackedScene" uid="uid://bj4w0ajv2jk2e" path="res://scenes/ui/defense_indicator.tscn" id="2_lv1ak"]
[ext_resource type="Script" uid="uid://blrs4jiqbl4v5" path="res://scripts/core/character/character_skill_component.gd" id="3_vbih0"]
[ext_resource type="Script" uid="uid://bnwrmd7xm1v5n" path="res://scripts/core/character/character_combat_component.gd" id="4_b1mxh"]
[ext_resource type="Script" uid="uid://wbh0x8825w2b" path="res://scripts/core/character/character_ai_component.gd" id="5_b1mxh"]
[ext_resource type="Script" uid="uid://c1h2m46l2lj50" path="res://scripts/core/ai/ai_behavior.gd" id="6_00x28"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vbih0"]

[sub_resource type="Resource" id="Resource_b3que"]
script = ExtResource("6_00x28")
behavior_type = "balanced"
attack_weight = 1.0
skill_offensive_weight = 1.0
skill_support_weight = 0.5
skill_healing_weight = 0.5
target_low_health_weight = 1.5
target_high_threat_weight = 1.0
heal_low_health_weight = 2.0
self_preservation_weight = 1.0
metadata/_custom_type_script = "uid://c1h2m46l2lj50"

[node name="CharacterScene" type="Node2D"]
script = ExtResource("1_f5tgq")

[node name="Container" type="VBoxContainer" parent="."]
offset_right = 150.0
offset_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NameLabel" type="Label" parent="Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "角色名称"
horizontal_alignment = 1

[node name="CharacterRect" type="ColorRect" parent="Container"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
color = Color(0.2, 0.4, 0.8, 1)

[node name="HPBar" type="ProgressBar" parent="Container"]
unique_name_in_owner = true
self_modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
value = 30.0
show_percentage = false

[node name="HPLabel" type="Label" parent="Container/HPBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "HP: 100/100"
horizontal_alignment = 1

[node name="MPBar" type="ProgressBar" parent="Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
show_percentage = false

[node name="MPLabel" type="Label" parent="Container/MPBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "MP: 100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DefenseIndicator" parent="." instance=ExtResource("2_lv1ak")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_vbih0")
}

[node name="CharacterSkillComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_vbih0")
metadata/_custom_type_script = "uid://blrs4jiqbl4v5"

[node name="CharacterCombatComponent" type="Node" parent="." node_paths=PackedStringArray("_skill_component")]
unique_name_in_owner = true
script = ExtResource("4_b1mxh")
_skill_component = NodePath("../CharacterSkillComponent")
metadata/_custom_type_script = "uid://bnwrmd7xm1v5n"

[node name="CharacterAIComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_b1mxh")
skill_usage_chance = 0.7
ai_enabled = true
behavior_resource = SubResource("Resource_b3que")
behavior_type = "aggressive"
